# micromamba-install-locked-pip-dependencies

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
micromamba_install_locked_pip_dependencies/: cli.py
